[tool.poetry]
name = "weapon_squeak"
version = "0.8.0"
description = "Unidentified bioweapon acquired"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
csotools-serverquery = "^0.3.0"
fastapi-etag = "^0.4.0"
slowapi = "^0.1.5"
item-suit = {git = "https://github.com/Blaperture-Mesa/item_suit.git", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
