[tool.poetry]
name = "weapon_squeak"
version = "0.26.0"
description = "Unidentified bioweapon acquired."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
csotools-serverquery = ">=0.4.0"
fastapi-etag = "^0.4.0"
slowapi = "^0.1.5"
item-suit = {git = "https://github.com/Blaperture-Mesa/item_suit.git", rev = "main"}
brotli-asgi = "^1.1.0"
sse-starlette = "^0.10.3"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
